--- a/views/first_test/profile.html
+++ b/views/first_test/profile.html
@@ -1,5 +1,5 @@
-<% include ../partials/header.ejs %>
-<% include ../partials/nav.ejs %>
+<% include ../partials/header.html %>
+<% include ../partials/nav.html %>
 <% if(person===''){ %>
 	<h1>Welcome to the profile page!!</h1>
 	<p>Hello Guys!!!<br>Welcome to this wonderful website. You will not find any more better site than this. You are at the write place.<br>Thank You!!!!!!!</p><br>
@@ -20,4 +20,4 @@
 		<% }) %>
 	</ul>
 <% } %>
-<% include ../partials/footer.ejs %>
+<% include ../partials/footer.html %>
